Улучшение массовой рассылки. Теперь пишет количество ошибок.

--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -218,7 +218,7 @@
                     <div class="col ">
                         <div class="row alert alert-primary align-items-center" style="overflow:hidden;">
                             <div class="col text-break h5">
-                                Отослать сообщение всем пользователям бота:
+                                Отослать сообщение всем пользователям бота
                             </div>
                             <div class="col-4">
                                 <a class="btn btn-info btn-lg btn-block" asp-controller="BotMassMailing" asp-action="Index" asp-route-botId="@ViewData["botId"]">Отослать</a>
