Немного работал над оплатой и дизайном. Добавил на главную страницу ссылки на канал и бота.

--- a/Website/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Website/Views/Shared/_CookieConsentPartial.cshtml
@@ -16,7 +16,7 @@
         @* <a asp-area="" asp-controller="Main" asp-action="Privacy">Learn More</a>.*@
 
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true"><i >Роскошненько</i></span>
+            <span aria-hidden="true">&times;</span>
         </button>
 
     </div>
